input. Try S(2*10^20); to see the error. I then tried to make it always
generate a leading 0, but that is as bad as generating a trailing 0. I finally
found the winning combination of code to make things work correctly: and it
always generates a leading 0.

2011/01/23

I decided to make Integer a true binary bigint, and make it do lots of funny
stuff and be independant. I moved the functions into the Integer namespace,
and added alot of useful functions.

2011/01/26

So, I didn't even do a test compile on 1/26, then I tried to use the file on
May 5, and had to fix it. This incorporates all of the fixes, mostly random
misuse of member data. There was also a bug in the Integer >> and <<, where a
negative shift wasn't turned into a positive shift in the other direction. The
only thing that isn't included is the functions to turn strings into Integers
and back agian. Most people won't use them. Finally, I added the divide
tempering test from Knuth, instead of running a loop.

2011/05/20

Fixed a stupid bug in toString. Now, it returns an empty string when base is
not in [2,36], instead of trying to do undefined math. Fixed a bug in
divApprox, a wierd off-by-one error that escaped the 100K tests.

2011/05/22

Changed some questionable logic in Bitfield |= and ^=. We'll see if I broke
anything.

2011/07/09

Made what are mostly cosmetic changes in 32-bit code, but should allow the
code to be compiled correctly under LP64 64-bit code semantics.

2011/07/10

I compiled under 64-bit GCC today. Success. With -Wconversion, the only
warnings generated are ignorable: until we have 256-bit computers, I could
use an unsigned char for the ints in question. Thinking about it, the code
should also work under LLP64 semantics (Microsoft), but it looses the only
benefit of 64 bit code: large address space.

2011/07/11

Fixed some instances where -0 could have been generated.

2011/07/13

Changed BitField::operator>>= to do less work, so it should be faster.

2011/12/22